--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name : Use Node.js 
-        uses: actions/setup-node@v3 
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: "20"
 
       - name: Install Dependencies
         run: npm install
-      
-      - name: Run Build 
+
+      - name: Run Build
         run: npm run build
